--- a/posts/ml/2022-11-21-ml-(11주차)_11월16일.ipynb
+++ b/posts/ml/2022-11-21-ml-(11주차)_11월16일.ipynb
@@ -286,6 +286,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "id": "81ad4564-5060-43fb-8c95-6c5b3d4c92e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 4])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x[[2]].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "6c6a42f3-1418-44d1-a93c-cefc173e6e30",
    "metadata": {},
@@ -452,7 +473,7 @@
    "metadata": {},
    "source": [
     "- input_size = 4\n",
-    "- hindden_soze = 2"
+    "- hindden_size = 2"
    ]
   },
   {
