--- a/posts/ml/2022-11-21-ml-11w.ipynb
+++ b/posts/ml/2022-11-21-ml-11w.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ec063325-2a8b-46a1-b8ec-4d2301c2ce7b",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "15025b87-2f4d-4906-b3d4-ea0d5428b3b1",
    "metadata": {},
    "outputs": [],
@@ -5144,7 +5144,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -5158,7 +5158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
