--- a/posts/ml/2022-11-02-ml-midterm.ipynb
+++ b/posts/ml/2022-11-02-ml-midterm.ipynb
@@ -2622,7 +2622,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2636,7 +2636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
