--- a/posts/ml/2022-11-09-ml-10w.ipynb
+++ b/posts/ml/2022-11-09-ml-10w.ipynb
@@ -5610,7 +5610,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5624,7 +5624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
