--- a/posts/ml/2022-12-08-13wk.ipynb
+++ b/posts/ml/2022-12-08-13wk.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "---\n",
-    "title: \"순환신경망 (5) (13주차)\"\n",
+    "title: \"RNN (13주차)\"\n",
     "author: \"SEOYEON CHOI\"\n",
     "date: \"2022-12-08\"\n",
     "categories:\n",
@@ -1091,7 +1091,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1105,7 +1105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
