--- a/posts/rl/2022-12-11-rl-Ch10.ipynb
+++ b/posts/rl/2022-12-11-rl-Ch10.ipynb
@@ -455,6 +455,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6cd0e4a6-5854-4cd0-9d72-faa4ebf7237c",
+   "metadata": {},
+   "source": [
+    "손계산"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 91,
    "id": "dcb60703-7b5a-4958-842e-f7be070caa23",
@@ -823,8 +831,75 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "3532308e-1a11-47d3-a188-9b5536178871",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Potentially influential observations of\n",
+      "\t lm(formula = y ~ x, data = df) :\n",
+      "\n",
+      "   dfb.1_ dfb.x   dffit   cov.r   cook.d hat    \n",
+      "18  0.83  -1.11_* -1.16_*  2.96_*  0.68   0.65_*\n",
+      "19  0.14   0.27    0.85    0.40_*  0.22   0.05  \n"
+     ]
+    }
+   ],
+   "source": [
+    "summary(influence.measures( model))"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "a5d5f22b-563f-4a54-9905-437c8441ce31",
+   "id": "bf438a93-4cb6-4340-9452-39db37ef93bb",
+   "metadata": {},
+   "source": [
+    "### 영향점(influential observation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1cd242b-2d49-47ff-9cf5-75229aa4fd22",
+   "metadata": {},
+   "source": [
+    "#### DIFFITS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81be0c35-5fd8-489a-8fe1-1e8310ee79fa",
+   "metadata": {},
+   "source": [
+    "$DIFFITS(i) = (\\frac{h_{ii}}{10h_{ii}})^{1/2} r^{*}_i$\n",
+    "\n",
+    "$DIFFITS(i) \\ge 2(\\frac{p+1}{n})^{1/2}$ 이 되는  i번째 관측칠가 영향점이라고 말함"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fc14da7-9718-4643-a602-d3afbb2bf2b3",
+   "metadata": {},
+   "source": [
+    "#### Cook의 통계량"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f295ed2b-fc67-4325-92ec-8b939bca0c9d",
+   "metadata": {},
+   "source": [
+    "$D(i) = \\frac{r^2_i}{p+1} \\frac{h_{ii}}{1-h_{ii}}$\n",
+    "\n",
+    "대략적으로 $D(i) \\ge F_{0.5}(p+1,n-p-1)$이면 영향을 크게 주는 측정값으로 의심"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ddbb4dd-467c-41f7-91e6-62035eff2ed1",
    "metadata": {},
    "source": [
     "h"
@@ -915,7 +990,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c76b1ad7-361a-45bb-b590-b8773d9fd30f",
+   "id": "db3ae79f-f26e-402e-bec1-541a30f672f2",
    "metadata": {},
    "source": [
     "diffits"
@@ -1008,7 +1083,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb053c63-06ad-474b-93ad-25f3cc2ffa4f",
+   "id": "4c0ea8ca-5df8-4710-8fe7-1bc0451a283d",
    "metadata": {},
    "source": [
     "cooksdistance, D"
@@ -1101,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c587f1c6-2f21-4e30-aa03-1de299c156d1",
+   "id": "2b220f66-4a6c-43de-a13f-4d589e6e7a58",
    "metadata": {},
    "source": [
     "COVRATIO"
@@ -1233,37 +1308,6 @@
    "source": [
     "influence.measures( model)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "id": "3532308e-1a11-47d3-a188-9b5536178871",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Potentially influential observations of\n",
-      "\t lm(formula = y ~ x, data = df) :\n",
-      "\n",
-      "   dfb.1_ dfb.x   dffit   cov.r   cook.d hat    \n",
-      "18  0.83  -1.11_* -1.16_*  2.96_*  0.68   0.65_*\n",
-      "19  0.14   0.27    0.85    0.40_*  0.22   0.05  \n"
-     ]
-    }
-   ],
-   "source": [
-    "summary(influence.measures( model))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e747ce8f-c245-4a3a-a36d-73553f50d702",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
