--- a/posts/ml/2022-12-21-Extra-1.ipynb
+++ b/posts/ml/2022-12-21-Extra-1.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "---\n",
     "title: \"Extra-1: 추천시스템\"\n",
-    "author: \"EOYEON CHOI\"\n",
-    "date: \"12/21/2022\"\n",
+    "author: \"SEOYEON CHOI\"\n",
+    "date: \"2022-12-21\"\n",
     "categories:\n",
     "  - 추천시스템\n",
     "---"
