--- a/posts/ts/2023-01-05-ts_HW2.ipynb
+++ b/posts/ts/2023-01-05-ts_HW2.ipynb
@@ -422,12 +422,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "96bd39ab-9f0a-4100-809c-13c43ffc118d",
+   "metadata": {},
+   "source": [
+    "# 2.41"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43bf7cdc-c563-4728-8d12-50fb54073caf",
+   "metadata": {},
+   "source": [
+    "확률변수 $X$의 확률밀도함수가\n",
+    "\n",
+    "$$f(x) = \\begin{cases} \\frac{1}{18} , & x=1,3\\text{인 경우} \\\\ \\frac{16}{18}, & x=2\\text{인 경우} \\end{cases}$$\n",
+    "\n",
+    "로 주어졌을때, $P(|X-E(X)|\\ge \\delta ) = Var(X)\\delta^2$을 만족하는 $\\delta$를 찾아라."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3522aec0-29fb-40c9-b6a0-a5941ebc44c8",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "**Answer**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "789ecaab-0f1f-4064-98a8-00db57dba542",
+   "metadata": {},
+   "source": [
+    "$P(X-E(X)|\\ge \\delta) \\le \\frac{var(X)}{\\delta^2}$\n",
+    "\n",
+    "$E(X) = 1 \\times \\frac{1}{18} + 2 \\times \\frac{16}{18} + 3 \\times \\frac{1}{18} = \\frac{36}{18} = 2$\n",
+    "\n",
+    "$var(X) = E(X-E(X)^2) = (1-2)^2\\times \\frac{1}{18} + (2-2)^2 \\times \\frac{16}{18} + (3-2)^2 \\times \\frac{1}{18} = \\frac{1}{9}$\n",
+    "\n",
+    "$P(|X-2| \\ge \\delta) = \\frac{1}{9 \\delta}$\n",
+    "\n",
+    "$\\star$\n",
+    "\n",
+    "$x - 2 \\ge \\delta$\n",
+    "\n",
+    "$x-2 \\le -\\delta$\n",
+    "\n",
+    "$\\delta = 1$\n",
+    "\n",
+    "$\\star$\n",
+    "\n",
+    "$P(X \\ge 3) + P(X \\le 1) = \\frac{1}{9}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc325411-653f-4ca9-8a31-76d61c34ab83",
+   "metadata": {},
+   "source": [
+    "마코프 확률부등식에 따라\n",
+    "\n",
+    "$\\frac{1}{\\delta} = \\frac{var(X)}{\\delta^2}$\n",
+    "\n",
+    "$\\delta = var(X)$\n",
+    "\n",
+    "$\\therefore \\delta = \\frac{1}{9}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c816983-5f97-4a77-8508-0d913b63cabb",
+   "id": "5504c984-25b9-426a-bc92-e19fd65e422b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
