--- a/posts/ts/2023-01-05-ts_HW2.ipynb
+++ b/posts/ts/2023-01-05-ts_HW2.ipynb
@@ -60,7 +60,7 @@
    "source": [
     "$E(\\frac{X-\\mu_X}{\\sigma_X}) = E(\\frac{X}{\\sigma_X}) - E(\\frac{\\mu_X}{\\sigma_X}) = \\frac{\\mu_X}{\\sigma_X} - \\frac{\\mu_X}{\\sigma_X} = 0$\n",
     "\n",
-    "$var(\\frac{X-\\mu_X}{\\sigma_X}) = E((\\frac{X-\\mu_X}{\\sigma_X})^2) - (E(\\frac{X-\\mu_X}{\\sigma_X}))^2$\n",
+    "$Var(\\frac{X-\\mu_X}{\\sigma_X}) = E((\\frac{X-\\mu_X}{\\sigma_X})^2) - (E(\\frac{X-\\mu_X}{\\sigma_X}))^2$\n",
     "\n",
     "$= E(\\frac{X^2 + \\mu X^2 - 2\\mu_X X}{\\sigma^2_X})= \\frac{E(X^2) + \\mu^2_X - 2\\mu^2_X}{\\sigma^2_X}$\n",
     "\n",
@@ -344,7 +344,7 @@
     "\n",
     "$= 4\\int_{-\\infty <x<\\infty, 0<x<1, 1<y<2x} 1 dx = \\int^1_{\\frac{y}{2}} 4I(1<y<2) dx [4x]^1_{\\frac{y}{2}}$\n",
     "\n",
-    "$= (4-2y)I(1<y<2$\n",
+    "$= (4-2y)I(1<y<2)$\n",
     "\n",
     "$\\star$\n",
     "\n",
