--- a/posts/ts/2023-01-05-ts_HW2.ipynb
+++ b/posts/ts/2023-01-05-ts_HW2.ipynb
@@ -680,7 +680,7 @@
     "\n",
     "$= E(e^{tX_1} e^{tX_2} \\dots e^{tX_n})$\n",
     "\n",
-    "$= E(e^{tx})E(e^{tX_2})\\dots E(e^{tX_n}) $\n",
+    "$= E(e^{tx})E(e^{tX_2})\\dots E(e^{tX_n})$\n",
     "\n",
     "$= M_{X_1}(t) M_{X_2}(t) \\dots M_{X_n}(t)$\n",
     "\n",
@@ -786,10 +786,18 @@
    "id": "0659c40f-fab6-4670-a082-c4b5828a3e9e",
    "metadata": {},
    "source": [
-    "$M_X(t) = E(e^{tx} = \\sum^n_{i=1} e^{tx} f(x) = \\frac{1}{9}e^t + \\frac{3}{9} e^{3t} + \\frac{5}{9} e^{5t}$\n",
+    "$M_X(t) = E(e^{tx}) = \\sum^n_{i=1} e^{tx} f(x) = \\frac{1}{9}e^t + \\frac{3}{9} e^{3t} + \\frac{5}{9} e^{5t}$\n",
     "\n",
     "$\\therefore f(x) = \\frac{x}{9}$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a9631f7-6ed3-4bd4-8a32-ee941c4af922",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
