--- a/posts/ts/2023-01-09-ts_HW4.ipynb
+++ b/posts/ts/2023-01-09-ts_HW4.ipynb
@@ -203,7 +203,7 @@
    "id": "b1a1df58-dbe8-4263-84e4-91020acbaaa3",
    "metadata": {},
    "source": [
-    "$P(\\frac{1}{5}\\sum^5_{i=1} X^2_i <c = 0.90$을 만족하는 상수 $c$값을 구하라."
+    "$P(\\frac{1}{5}\\sum^5_{i=1} X^2_i <c) = 0.90$을 만족하는 상수 $c$값을 구하라."
    ]
   },
   {
@@ -300,7 +300,7 @@
     "\n",
     "$\\frac{(n-1)S_n^2}{\\sigma^2} = \\frac{\\sum^n_{i=1}(X_i - \\bar{X})^2}{\\sigma^2} \\sim \\chi^2_{n-1}$\n",
     "\n",
-    "$var(\\frac{\\sum^n_{i=1}(X_i - \\bar{X})^2}{n}) = var(\\frac{\\sum^n_{i=1}(X_i - \\bar{X})^2}{\\sigma^2} \\times \\frac{\\sigma^2}{n}) = \\frac{\\sigma^4}{n^2} car(\\frac{\\sum^n_{i=1}(X_i - \\bar{X})^2}{\\sigma^2}) = \\frac{\\sigma^4}{n^2} \\times 2(n-1)$"
+    "$var(\\frac{\\sum^n_{i=1}(X_i - \\bar{X})^2}{n}) = var(\\frac{\\sum^n_{i=1}(X_i - \\bar{X})^2}{\\sigma^2} \\times \\frac{\\sigma^2}{n}) = \\frac{\\sigma^4}{n^2} var(\\frac{\\sum^n_{i=1}(X_i - \\bar{X})^2}{\\sigma^2}) = \\frac{\\sigma^4}{n^2} \\times 2(n-1)$"
    ]
   },
   {
@@ -389,7 +389,7 @@
    "source": [
     "$X_1,X_2,\\dots,X_{16}$이 $N(5,25)$으로부터 구한 랜덤표본이라고 하자.\n",
     "\n",
-    "이때 $P(0<\\bar{X}_{16}<6,20<\\sum^{16}_{i=1}(\\frac{(X_i - \\bar{X}_{16})^2}{16} <30)$을 계산하라."
+    "이때 $P(0<\\bar{X}_{16}<6,20<\\sum^{16}_{i=1}\\frac{(X_i - \\bar{X}_{16})^2}{16} <30)$을 계산하라."
    ]
   },
   {
@@ -448,9 +448,9 @@
     "\n",
     "$\\frac{15S^2_{16}}{25} = \\frac{3S^2_{16}}{5} \\sim \\chi^2_{15}$\n",
     "\n",
-    "$P(20<\\sum^{16}_{i=1}(\\frac{(X_i - \\bar{X}_{16})^2}{16} <30)$\n",
+    "$P(20<\\sum^{16}_{i=1}\\frac{(X_i - \\bar{X}_{16})^2}{16} <30)$\n",
     "\n",
-    "$= P(20 \\times \\frac{16}{25} < frac{(X_i - \\bar{X}_{16})^2}{25} < 30 \\times \\frac{16}{25})$\n",
+    "$= P(20 \\times \\frac{16}{25} < \\frac{(X_i - \\bar{X}_{16})^2}{25} < 30 \\times \\frac{16}{25})$\n",
     "\n",
     "$P(12.8)<\\chi^2_{15} <19.2) = 0.4129$"
    ]
@@ -489,9 +489,9 @@
    "id": "dd668f5b-9d8b-427e-83fb-07a317e9f6d9",
    "metadata": {},
    "source": [
-    "$\\bar{X}_{16}$과 $\\sum^{16}{i=1}(X_i - \\bar{X}_{16})^2$은 독립\n",
+    "$\\bar{X}_{16}$과 $\\sum^{16}_{i=1}(X_i - \\bar{X}_{16})^2$은 독립\n",
     "\n",
-    "$P(0<\\bar{X}_{16}<6,20<frac{(X_i - \\bar{X}_{16})^2}{16}<30) = 0.9772 \\times 0.4129 = 0.4035$"
+    "$P(0<\\bar{X}_{16}<6,20<\\frac{(X_i - \\bar{X}_{16})^2}{16}<30) = 0.9772 \\times 0.4129 = 0.4035$"
    ]
   },
   {
