--- a/posts/ts/2023-01-21-ts-HW9.ipynb
+++ b/posts/ts/2023-01-21-ts-HW9.ipynb
@@ -573,14 +573,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e9f2333-cfa8-422d-8005-af1caf99d165",
-   "metadata": {},
-   "source": [
-    "# ?아직 못 품.."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c2c3a1f8-8b6b-4132-b8d2-6c1eef143806",
    "metadata": {},
    "source": [
@@ -1325,13 +1317,13 @@
    "source": [
     "$\\mu$가 장애요소\n",
     "\n",
-    "$L(\\mu, \\sigma^2( = (\\frac{1}{2\\pi \\sigma^2})^{\\frac{n}{2}}e^{-\\frac{(x-\\mu)^2}{2\\sigma^2}}$\n",
+    "$L(\\mu, \\sigma^2( = (\\frac{1}{2\\pi \\sigma^2})^{\\frac{n}{2}}e^{-\\frac{(x-\\mu)^2}{2\\sigma^2}})$\n",
     "\n",
     "$\\Lambda = \\frac{L(\\hat{\\mu}_0,\\hat{\\sigma}^2_0)}{L(\\hat{\\mu},\\hat{\\sigma}^2)}$\n",
     "\n",
     "- $\\Omega_0 = \\{ (\\mu,\\sigma^2) : -\\infty < \\mu < \\infty , \\sigma^2 = \\sigma^2_0\\}$\n",
     "    - $\\hat{\\mu}_0 = {argmax}_{(\\mu,\\sigma^2)\\in\\Omega_0} L(\\mu,\\sigma^2) = \\bar{x}$\n",
-    "    - \\hat{\\sigma}^2_0 = \\sigma^2_0$\n",
+    "    - $\\hat{\\sigma}^2_0 = \\sigma^2_0$\n",
     "    \n",
     "- $\\Omega = \\{ (\\mu, \\sigma^2) : -\\infty < \\mu < \\infty , \\sigma^2 \\ge \\sigma^2_0, \\sigma^2 > 0 \\}$\n",
     "    - $\\hat{\\mu} = \\bar{x}$\n",
@@ -1358,7 +1350,7 @@
     "\n",
     "2. $\\frac{1}{n}\\sum^n_{i=1}(x_i-\\bar{x})^2 > \\sigma^2_0 \\to \\hat{\\sigma}^2 = \\frac{1}{n}\\sum^n_{i=1}(x_i - \\bar{x})^2$\n",
     "\n",
-    "- 예 5.24에서 다룬 식, $\\Lambda$는 $\\frac{\\hat{\\sigma}}{\\sigma^2_0}의 감소함수이다.\n",
+    "- 예 5.24에서 다룬 식, $\\Lambda$는 $\\frac{\\hat{\\sigma}}{\\sigma^2_0}$의 감소함수이다.\n",
     "\n",
     "기각역 : $\\frac{1}{n}\\sum(x_i - \\bar{x})^2 \\ge k$\n",
     "\n",
@@ -1366,7 +1358,7 @@
     "\n",
     "$\\star \\frac{\\sum^n_{i=1}(x_i - \\bar{x})^2}{\\sigma^2} \\sim \\chi^2_{(n-1)}$\n",
     "\n",
-    "$= P(\\frac{\\sum^n_{i=1}(x_i 0 \\bar{x})^2}{\\sigma^2_0} \\ge \\frac{k}{\\sigma^2_0} | \\sigma^2 = \\sigma^2_0)$\n",
+    "$= P(\\frac{\\sum^n_{i=1}(x_i - \\bar{x})^2}{\\sigma^2_0} \\ge \\frac{k}{\\sigma^2_0} | \\sigma^2 = \\sigma^2_0)$\n",
     "\n",
     "$\\frac{k}{\\sigma^2_0} = \\chi^2_{0.05(n-1)}$\n",
     "\n",
