--- a/posts/ts/2023-01-09-ts_HW4.ipynb
+++ b/posts/ts/2023-01-09-ts_HW4.ipynb
@@ -296,7 +296,7 @@
    "id": "de0cae85-801a-4d72-823e-cd4691433638",
    "metadata": {},
    "source": [
-    "$S_n^2 = \\sum^n_{i=1}\\frac{(X_i - \\bar{X}_n)^2}{(n-1)}$\n",
+    "$S_n^2 = \\frac{\\sum^n_{i=1} (X_i - \\bar{X}_n)^2}{(n-1)}$\n",
     "\n",
     "$\\frac{(n-1)S_n^2}{\\sigma^2} = \\frac{\\sum^n_{i=1}(X_i - \\bar{X})^2}{\\sigma^2} \\sim \\chi^2_{n-1}$\n",
     "\n",
@@ -578,7 +578,11 @@
    "id": "62002666-1723-4125-9604-fbee2c4a92fe",
    "metadata": {},
    "source": [
-    "$M_{\\bar{X}_{16}} - \\bar{Y}_{25}(t) = exp(t(0-2) + \\frac{t^2}{2}(\\frac{9}{16} + \\frac{16}{25}))$\n",
+    "$E(\\bar{X}_{16} - \\bar{Y}_{25}) = E(0-2) = -2$\n",
+    "\n",
+    "$Var(\\bar{X}_{16} - \\bar{Y}_{25}) = \\frac{9}{16} + \\frac{26}{25} = \\frac{481}{400}$\n",
+    "\n",
+    "$M_{\\bar{X}_{16} - \\bar{Y}_{25}}(t) = exp(t(0-2) + \\frac{t^2}{2}(\\frac{9}{16} + \\frac{16}{25}))$\n",
     "\n",
     "$\\bar{X}_{16} - \\bar{Y}_{25} \\sim N(-2,\\frac{481}{400})$"
    ]
@@ -614,7 +618,7 @@
    "id": "b2e5def9-f38f-4431-aea7-7f4ea8f75462",
    "metadata": {},
    "source": [
-    "$P(\\bar{X}_{16} - \\bar{Y}_{25} > 0) = 10P(\\bar{X}_{16} - \\bar{Y}_{25} <0) = 0.0341$"
+    "$P(\\bar{X}_{16} - \\bar{Y}_{25} > 0) = 1-P(\\bar{X}_{16} - \\bar{Y}_{25} <0) = 0.0341$"
    ]
   },
   {
@@ -696,6 +700,35 @@
     "$P(X_1 - X_2 < 2)$, $X_1 - X_2 \\sim N(0,2)$\n",
     "\n",
     "$= P(\\frac{(X_1 - X_2) - 0}{\\sqrt{2}} <\\sqrt{2}) = P(z<\\sqrt{2}) = 0.9214$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "28bc6c4a-3608-4431-a906-6688edf90495",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0.921350396474857"
+      ],
+      "text/latex": [
+       "0.921350396474857"
+      ],
+      "text/markdown": [
+       "0.921350396474857"
+      ],
+      "text/plain": [
+       "[1] 0.9213504"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pnorm(sqrt(2),0,1)"
    ]
   },
   {
@@ -906,7 +939,7 @@
    "id": "006109b2-9401-43dd-a5f0-40d355a8748d",
    "metadata": {},
    "source": [
-    "$X^2_1 + \\dots + X^2_{50} + c) = 0.9$ 를 만족하는 상수 $c$를 구하라."
+    "$P(X^2_1 + \\dots + X^2_{50} + c) = 0.9$ 를 만족하는 상수 $c$를 구하라."
    ]
   },
   {
@@ -922,7 +955,7 @@
    "id": "329e2fd3-7d34-420c-8fb2-11b855253203",
    "metadata": {},
    "source": [
-    "$P(X^2_1 + X^2_{50} < 50+ c) = 0.9$, $50+c = 63.1671$, $c=13.1671$"
+    "$P(X^2_1 + \\dots + X^2_{50} < 50+ c) = 0.9$, $50+c = 63.1671$, $c=13.1671$"
    ]
   },
   {
