--- a/posts/ts/2023-01-18-ts_HW7.ipynb
+++ b/posts/ts/2023-01-18-ts_HW7.ipynb
@@ -58,11 +58,13 @@
    "source": [
     "$X \\sim Poisson(\\lambda) \\to f(x| \\lambda) = \\frac{\\lambda^x e^{-\\lambda}}{\\lambda!}$\n",
     "\n",
+    "$E(X) = \\lambda$, $Var(X) = \\lambda$\n",
+    "\n",
     "$Var(\\bar{X}) = \\frac{1}{nI(\\theta)}$일까?\n",
     "\n",
     "$I(\\theta) = E(\\frac{\\partial}{\\partial \\lambda} log f(x|\\lambda)^2)$\n",
     "\n",
-    "$= E(-1 + \\frac{X}{\\lambda})^2 = E(\\frac{X-\\lambda}{\\lambda})^2 = \\frac{1}{\\lambda}$\n",
+    "$= E(-1 + \\frac{X}{\\lambda})^2 = E(\\frac{X-\\lambda}{\\lambda})^2 = \\frac{E(X^2) - 2\\lambda E(X) + \\lambda^2}{\\lambda^2} = \\frac{\\lambda + \\lambda^2-2\\lambda^2 + \\lambda^2}{\\lambda^2} = \\frac{1}{\\lambda}$\n",
     "\n",
     "$\\frac{1}{nI(\\theta)} = \\frac{\\lambda}{n}$\n",
     "\n",
@@ -102,7 +104,7 @@
    "source": [
     "델타 방법 이용\n",
     "\n",
-    "$\\sqrt{n}(g(\\hat{\\theta})-g(\\theta_0) \\xrightarrow[]{d} N(0,\\frac{(g'(\\theta_0)^2}{I(\\theta_0)})$\n",
+    "$\\sqrt{n}(g(\\hat{\\theta})-g(\\theta_0) \\xrightarrow[]{d} N(0,\\frac{g'(\\theta_0)^2}{I(\\theta_0)})$\n",
     "\n",
     "$g(\\theta_0) = p(1-p)$\n",
     "\n",
@@ -112,7 +114,7 @@
     "\n",
     "$\\therefore \\frac{(1-2p)^2}{I(p)} = p(1-p)(1-2p)^2$\n",
     "\n",
-    "$\\sqrt{n}(\\frac{p(1-p)}{n} - p(1-p) \\xrightarrow[]{d} N(0,p(1-p)(1-2p)^2$"
+    "$\\sqrt{n}(\\frac{p(1-p)}{n} - p(1-p) \\xrightarrow[]{d} N(0,p(1-p)(1-2p)^2)$"
    ]
   },
   {
@@ -128,7 +130,7 @@
    "id": "a9eb23c9-f153-4814-a749-1c46d4274a3f",
    "metadata": {},
    "source": [
-    "$X_1,X_2,X_3$이 $f_X(x:\\theta)=\\frac{1}{\\theta}exp(-\\frac{x}{\\theta}),x>0$으로부터 얻은 랜덤표본이라고 하자. 모수 $\\theta$를 추정함에 있어 $(X_1 + 2X_2 + X_3/4$의 $\\bar{X}_3$에 대한 효율을 구하라."
+    "$X_1,X_2,X_3$이 $f_X(x:\\theta)=\\frac{1}{\\theta}exp(-\\frac{x}{\\theta}),x>0$으로부터 얻은 랜덤표본이라고 하자. 모수 $\\theta$를 추정함에 있어 $\\frac{X_1 + 2X_2 + X_3}{4}$의 $\\bar{X}_3$에 대한 효율을 구하라."
    ]
   },
   {
@@ -146,7 +148,7 @@
    "source": [
     "$\\sim \\frac{(X_1 + 2X_2 + X_3)/4}{\\bar{X}_3}$\n",
     "\n",
-    "$eff((X_1 + 2X_2 + X_3)/4,\\bar{X}_3) = \\frac{1/Var((X_1+2X_2+X_3)/4)}{1/Var(\\bar{X}_3)}$\n",
+    "$\\text{eff}((X_1 + 2X_2 + X_3)/4,\\bar{X}_3) = \\frac{1/Var((X_1+2X_2+X_3)/4)}{1/Var(\\bar{X}_3)}$\n",
     "\n",
     "$E(\\frac{X_1 + 2X_2 + X_3}{4}) = \\frac{\\theta + 2\\theta + \\theta}{4} = \\theta \\to$비편향추정량\n",
     "\n",
