--- a/posts/ct/2023-01-30-Coding Test_Q3.ipynb
+++ b/posts/ct/2023-01-30-Coding Test_Q3.ipynb
@@ -139,8 +139,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a854c3a1-8b36-4c5f-9bfa-44f405c8780a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(alp, cop, problems):\n",
+    "    answer = 0\n",
+    "    \n",
+    "    alp\n",
+    "    cop\n",
+    "    alp_req, cop_req, alp_wd, cop_wd, cost = problems\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "73a9fca8-8e78-418d-a590-81d8a282a1e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "problems = [[0,0,2,1,2],[4,5,3,1,2],[4,11,4,0,2],[10,4,0,4,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "97c79bb7-4d2c-4ed8-a9a4-a785fd97cffb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(problems)):\n",
+    "    a = max(problems[i][0],0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "11f92257-493e-44e4-a4d2-d2158bf7b1ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(problems)):\n",
+    "    b = max(problems[i][1],0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dac4656f-ab99-45e5-9449-ac0552cd3162",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a<b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "738159a8-761b-4018-99af-b7bafa77e2fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a>b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cf317a5-d0b6-4beb-8824-050f816ce275",
    "metadata": {},
    "outputs": [],
    "source": []
