--- a/posts/ts/2023-01-18-ts-HW8.ipynb
+++ b/posts/ts/2023-01-18-ts-HW8.ipynb
@@ -321,7 +321,7 @@
     "\n",
     "$= P(exp(\\frac{x_1}{2} + \\frac{x_2}{2}) > 2 | \\theta = 1)$\n",
     "\n",
-    "$1-\\int^{\\infty}_2 exp(\\frac{1}{2}[2exp(x_1 + x_2 ) dx$\n",
+    "$= 1-\\int^{\\infty}_2 exp(\\frac{1}{2}[2exp(x_1 + x_2 ) dx$\n",
     "\n",
     "$= 1-exp(\\frac{1}{2}[2exp(x_1 + x_2)]^\\infty_2$\n",
     "\n",
