--- a/posts/ct/2023-01-30-Coding Test_Q3.ipynb
+++ b/posts/ct/2023-01-30-Coding Test_Q3.ipynb
@@ -27,6 +27,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "eb7f453b-5f27-4214-aa9d-b27cd97a7bee",
+   "metadata": {},
+   "source": [
+    "https://velog.io/@jinyeong-afk/Python-2022-KAKAO-TECH-INTERNSHIP-%EC%BD%94%EB%94%A9-%ED%85%8C%EC%8A%A4%ED%8A%B8-%EA%B3%B5%EB%B6%80-DPDynamic-Programming-%EB%8F%99%EC%A0%81-%EA%B3%84%ED%9A%8D%EB%B2%95"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "75943de9-8184-401d-8b5b-3dcae4ca0b68",
    "metadata": {},
    "source": [
@@ -236,7 +244,35 @@
    "id": "3cf317a5-d0b6-4beb-8824-050f816ce275",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def solution(alp, cop, problems):\n",
+    "    max_alp, max_cop = 0, 0\n",
+    "    # 문제 풀이 2번\n",
+    "    for a,b,c,d,e in problems:\n",
+    "        max_alp = max(max_alp, a)\n",
+    "        max_cop = max(max_cop, b)\n",
+    "    INF = float('inf')\n",
+    "    dp = [[INF] * (max_cop + 1) for _ in range(max_alp + 1)] # 문제 풀이 1번\n",
+    "    # 문제 풀이 2-1번\n",
+    "    alp = min(alp, max_alp)\n",
+    "    cop = min(cop, max_cop)\n",
+    "    dp[alp][cop] = 0\n",
+    "    # 문제 풀이 3번\n",
+    "    for i in range(alp, max_alp+1):\n",
+    "        for j in range(cop, max_cop+1):\n",
+    "        \t# 문제 풀이 3-1번\n",
+    "            if i < max_alp:\n",
+    "                dp[i+1][j] = min(dp[i][j] + 1, dp[i+1][j])\n",
+    "            if j < max_cop:\n",
+    "                dp[i][j+1] = min(dp[i][j] + 1, dp[i][j+1])\n",
+    "            # 문제 풀이 3-2번  \n",
+    "            for a,b,c,d,e in problems:\n",
+    "                if i >= a and j >= b:\n",
+    "                    next_alp, next_cop = min(max_alp, i+c), min(max_cop, j+d)\n",
+    "                    dp[next_alp][next_cop] = min(dp[next_alp][next_cop], dp[i][j] + e)\n",
+    "    # 문제 풀이 4번\n",
+    "    return dp[max_alp][max_cop]"
+   ]
   }
  ],
  "metadata": {
