--- a/posts/ml/2022-11-21-ml-11w.ipynb
+++ b/posts/ml/2022-11-21-ml-11w.ipynb
@@ -3941,7 +3941,7 @@
     "\n",
     "weight_ih_l[k] – the learnable input-hidden weights of the $\\text{k}^{th}$ layer $(W_ii|W_if|W_ig|W_io)$, of shape (4*hidden_size, input_size) for $k = 0$. Otherwise, the shape is (4*hidden_size, num_directions * hidden_size). If proj_size > 0 was specified, the shape will be (4*hidden_size, num_directions * proj_size) for $k > 0$\n",
     "\n",
-    "weight_hh_l[k] – the learnable hidden-hidden weights of the \\text{k}^{th}$layer $(W_hi|W_hf|W_hg|W_ho)$, of shape (4*hidden_size, hidden_size). If proj_size > 0 was specified, the shape will be (4*hidden_size, proj_size)."
+    "weight_hh_l[k] – the learnable hidden-hidden weights of the $\\text{k}^{th}$layer $(W_hi|W_hf|W_hg|W_ho)$, of shape (4*hidden_size, hidden_size). If proj_size > 0 was specified, the shape will be (4*hidden_size, proj_size)."
    ]
   },
   {
@@ -4001,7 +4001,7 @@
    "id": "24f78eaf-45d1-4454-8e6d-5fe0f8e13866",
    "metadata": {},
    "source": [
-    "$\\circ \\text{ , } \\square \\text{, } \\star \\text{, } \\triangleleft $각 두 개씩"
+    "$\\circ \\text{ , } \\square \\text{, } \\star \\text{, } \\triangleleft$각 두 개씩"
    ]
   },
   {
