--- a/posts/ts/2023-01-25-ts-final term.ipynb
+++ b/posts/ts/2023-01-25-ts-final term.ipynb
@@ -628,22 +628,9 @@
    "id": "dac7df24-fc18-4858-a2e3-283d6c0f6554",
    "metadata": {},
    "source": [
-    "$\\frac{4^n}{\\theta^n} exp((\\theta-4) \\sum x_i) < k$\n",
+    "$-2log\\frac{4^n}{\\theta^n} exp((\\theta-4) \\sum x_i) >\\chi^2_{\\alpha, df}$\n",
     "\n",
-    "$exp((\\theta-4) \\sum x_i) < k$\n",
-    "\n",
-    "$(\\theta-4) \\sum x_i< k$\n",
-    "\n",
-    "$(\\theta-4)n \\bar{x}< k$\n",
-    "..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3408876c-7b43-4854-86f8-45177d6852ff",
-   "metadata": {},
-   "source": [
-    "not done"
+    "$exp((\\theta-4) \\sum x_i) < \\chi^2_{\\alpha, df}$"
    ]
   },
   {
