--- a/posts/ts/2023-01-14-ts_Mid term.ipynb
+++ b/posts/ts/2023-01-14-ts_Mid term.ipynb
@@ -45,6 +45,32 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b9453e5-4bee-4892-8156-e84d4707b651",
+   "metadata": {},
+   "source": [
+    "$\\star$\n",
+    "\n",
+    "$\\frac{n T_1(X)}{\\sigma^2} \\sim \\chi^2 (n)$, $\\frac{(n-1) T_2(X))}{\\sigma^2} \\sim \\chi^2 (n-1)$\n",
+    "\n",
+    "$E(\\frac{n T_1(X)}{\\sigma^2}) = n$\n",
+    "\n",
+    "$\\therefore E(T_1(X)) = \\sigma^2$\n",
+    "\n",
+    "$E(\\frac{(n-1) T_2(X)}{\\sigma^2}) = n-1$\n",
+    "\n",
+    "$\\therefore E(T_2(X)) = \\sigma^2$\n",
+    "\n",
+    "$V(\\frac{n T_1(X)}{\\sigma^2}) = \\frac{n^2}{\\sigma^4}V(T_1(X)) = 2n$\n",
+    "\n",
+    "$\\therefore V(T_1(X)) = \\frac{2\\sigma^4}{n}$\n",
+    "\n",
+    "$V(\\frac{(n-1) T_2(X)}{\\sigma^2}) = \\frac{(n-1)^2}{\\sigma^4}V(T_2(X)) = 2(n-1)$\n",
+    "\n",
+    "$\\therefore V(T_2(X))= \\frac{2\\sigma^4}{n-1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d6c1d902-4c16-439d-ac83-27e00c6d83a9",
    "metadata": {},
    "source": [
@@ -124,11 +150,17 @@
    "source": [
     "`-` $Var(T_1(X))$\n",
     "\n",
-    "$= Var(\\frac{1}{n}\\sum^n_{i=1}(X_i - \\mu)^2)$\n",
+    "$= Var(\\frac{\\sigma^2}{n} \\frac{1}{\\sigma^2}\\sum^n_{i=1}(X_i - \\mu)^2)$\n",
     "\n",
-    "$= Var(\\frac{n\\sigma^2}{n})$\n",
+    "$= \\frac{\\sigma^4}{n^2}2n$\n",
     "\n",
-    "$= \\sigma^4$\n",
+    "$= (\\frac{2\\sigma^4}{n})$\n",
+    "\n",
+    "$\\star$\n",
+    "\n",
+    "$V = \\sum(\\frac{X_i - \\mu}{\\sigma})^2 \\sim chi^2(n)$\n",
+    "\n",
+    "$\\star$\n",
     "\n",
     "`-` $Var(T_2(X))$\n",
     "\n",
@@ -196,7 +228,7 @@
    "source": [
     "Delta Method\n",
     "\n",
-    "$\\sqrt{n}(\\bar{X}^2_n - \\mu^2) \\xrightarrow[]{d} N(0,4\\mu^2\\sigma^2) $ 단, $\\mu \\neq 0$\n",
+    "$\\sqrt{n}(\\bar{X}^2_n - \\mu^2) \\xrightarrow[]{d} N(0,4\\mu^2\\sigma^2)$ 단, $\\mu \\neq 0$\n",
     "\n",
     "$\\mu = \\lambda$, $\\sigma^2 = \\lambda$\n",
     "\n",
@@ -278,7 +310,9 @@
   {
    "cell_type": "markdown",
    "id": "5c161740-0b54-4332-9ebe-471f55c65c87",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "# 3."
    ]
@@ -314,13 +348,13 @@
    "source": [
     "$g(X) = \\frac{1}{X}$, $g^{-1} (Y) = \\frac{1}{y}$\n",
     "\n",
-    "$= f_Y(y) = f_X(g^{-1}(y))\\frac{dg^{-1}(y)}{dg}$\n",
+    "$= f_Y(y) = f_X(g^{-1}(y))|\\frac{dg^{-1}(y)}{dg}|$\n",
     "\n",
-    "$= f_X(\\frac{1}{y})(-\\frac{1}{y^2})$\n",
+    "$= f_X(\\frac{1}{y})(\\frac{1}{y^2})$\n",
     "\n",
-    "$= 3e^{-\\frac{3}{y}}(-\\frac{1}{y^2})I(y>0)$\n",
+    "$= 3e^{-\\frac{3}{y}}(\\frac{1}{y^2})I(y>0)$\n",
     "\n",
-    "$= -\\frac{3}{y^2}e^{-\\frac{3}{y}}I(y>0)$"
+    "$= \\frac{3}{y^2}e^{-\\frac{3}{y}}I(y>0)$"
    ]
   },
   {
