--- a/posts/ml_basic/2023-03-23-Support Vector Machine.ipynb
+++ b/posts/ml_basic/2023-03-23-Support Vector Machine.ipynb
@@ -411,6 +411,9 @@
     "소프트 마진 선형 SVM 분류기의 목적 함수\n",
     "\n",
     "- 슬랙 변수 slack variable $\\zeta^{(i)} \\ge 0$ 도입\n",
+    "    - i번째 샘플이 얼마나 마진을 위반할지 정함\n",
+    "    - $x > b$\n",
+    "    - $x = b + slack$\n",
     "\n",
     "마진 오류 최소화 방법\n",
     "\n",
