--- a/posts/ml_basic/2023-03-28-Linear Regression, Logistic Regression.ipynb
+++ b/posts/ml_basic/2023-03-28-Linear Regression, Logistic Regression.ipynb
@@ -35,9 +35,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aab63f6b-c156-4464-987e-f8516df7513d",
+   "metadata": {},
+   "source": [
+    "[책_The Elements of Statistical Learning](https://hastie.su.domains/Papers/ESLII.pdf)\n",
+    "\n",
+    "보고 릿지 라쏘"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf1e68a0-02b8-4ed0-999c-7dd8484ef063",
+   "id": "b5b66173-66ec-4388-b1ce-dbf90fadae6e",
    "metadata": {},
    "outputs": [],
    "source": []
