--- a/posts/ml_basic/2023-03-28-Linear Regression, Logistic Regression.ipynb
+++ b/posts/ml_basic/2023-03-28-Linear Regression, Logistic Regression.ipynb
@@ -9,9 +9,9 @@
    },
    "source": [
     "---\n",
-    "title: \"Linear Regression, Logistic Regression\"\n",
+    "title: \"Logistic Regression\"\n",
     "author: \"SEOYEON CHOI\"\n",
-    "date: \"2023-04-01\"\n",
+    "date: \"2023-04-09\"\n",
     "categories:\n",
     "  - Machine learning basic\n",
     "  - 지도학습\n",
@@ -23,7 +23,7 @@
    "id": "3154d7b6-7b9d-47dc-848c-108ce9b8fb4e",
    "metadata": {},
    "source": [
-    "> Linear Regression, Logistic Regression"
+    "> Logistic Regression"
    ]
   },
   {
