--- a/posts/ap/2023-04-11-ap-6wk.ipynb
+++ b/posts/ap/2023-04-11-ap-6wk.ipynb
@@ -255,6 +255,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c43a5de-30a5-4e7a-8b3b-62b4e570f582",
+   "metadata": {},
+   "source": [
+    "전체 집합 $\\to$ $\\mathbb{Z}$\n",
+    "\n",
+    "카운터블 유니온으로 커버 $\\to$ $\\mathbb{Z} = \\sum^\\infty_{i=1} A_i$\n",
+    "\n",
+    "메져 유한은 아님 $\\to$ $m(A_i) <\\infty$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "df020ceb-cfd7-4739-9cfd-72b8e20ddedd",
    "metadata": {},
    "source": [
@@ -375,9 +387,17 @@
    "id": "25467284-47e5-4d0d-bd28-c817f414b03a",
    "metadata": {},
    "source": [
-    "`-` 이론: ($\\star$) 임의의 인덱스 집합 $I\\neq\\emptyset$를 고려하자. 여기에서 $I$는 uncountable set일 수도 있다. 아래의 사실에 증명하라. \n",
+    "`-` 이론: ($\\star$) 임의의 인덱스 집합 $I\\neq\\emptyset$를 고려하자. 여기에서 $I$는 uncountable set일 수도 있다. 아래의 사실에 성립한다. \n",
     "\n",
     "- ${\\cal F}_i$가 모두 시그마필드라면, $\\cap_{i \\in I}{\\cal F_i}$ 역시 시그마필드이다. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b8355a4-9484-4b8b-9b32-e43ba7a0b64d",
+   "metadata": {},
+   "source": [
+    "$\\to {\\cal F}_1$이 $\\Omega$에 대하여 시그마필드이고,${\\cal F}_2$이 $\\Omega$에 대하여 시그마필드이라면, ${\\cal F_1}\\cap_{i \\in I}{\\cal F_2}$ 역시 시그마필드이다. "
    ]
   },
   {
@@ -399,6 +419,22 @@
     "2. $A_1,A_2 \\dots \\in {\\cal F} \\Rightarrow \\cup_{i}A_i \\in {\\cal F}$\n",
     "\n",
     "만 보이면 된다. (이럴때는 전체집합 조건하나를 빼는게 유리하다)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc5d3874-2b29-4d09-a780-8a13fdb15527",
+   "metadata": {},
+   "source": [
+    ":::{.callout-note}\n",
+    "1. 전체집합 조건 -> $\\Omega$ 포함\n",
+    "\n",
+    "2. $A \\in {\\cal F} \\Rightarrow A^c \\in {\\cal F}$\n",
+    "\n",
+    "3. $A_1,A_2 \\dots \\in {\\cal F} \\Rightarrow \\cup_{i}A_i \\in {\\cal F}$\n",
+    "\n",
+    "1번 생략하고 2,3번만 증명한 것 \n",
+    ":::"
    ]
   },
   {
@@ -431,6 +467,16 @@
    "metadata": {},
    "source": [
     "$A_1,A_2,\\dots \\in {\\cal F} \\Rightarrow \\forall i: A_1,A_2,\\dots \\in {\\cal F}_i \\Rightarrow \\forall i: \\cup_jA_j \\in {\\cal F}_i \\Rightarrow \\cup_jA_j \\in {\\cal F}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da5deab5-4fd9-40f4-8f36-fb6026c87700",
+   "metadata": {},
+   "source": [
+    ":::{.callout-note}\n",
+    "시그마 필드가 countable union에 갇혀 있기 때문에 가능\n",
+    ":::"
    ]
   },
   {
