--- a/posts/sas/2025-08-19-SAS1.ipynb
+++ b/posts/sas/2025-08-19-SAS1.ipynb
@@ -17,6 +17,144 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9eae0aaa-1f42-47ba-ad6c-0da68b0963d2",
+   "metadata": {},
+   "source": [
+    "# 시험 기본"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0388946-5201-4755-ab1b-f4af20c8cd7b",
+   "metadata": {},
+   "source": [
+    "## 시험 구조"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a7f707e-067c-4e04-9ea0-51489b1ea590",
+   "metadata": {},
+   "source": [
+    "Performance Based Exam (즉, 문제는 이론 + 코드 기반 실습)\n",
+    "\n",
+    "출제 영역\n",
+    "- SQL (35%)\n",
+    "- Macro (35%)\n",
+    "- Advanced Techniques (30%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2235515-e1a4-43e7-bf3d-7f874380e15f",
+   "metadata": {},
+   "source": [
+    "### 1. Accessing Data Using SQL (35%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d17ec04-ee29-46b9-a389-63834560026d",
+   "metadata": {},
+   "source": [
+    "- 기본 SELECT: SELECT, FROM, WHERE, ORDER BY\n",
+    "- 새 변수 생성: AS, 계산열, CASE WHEN\n",
+    "- 조인: INNER, LEFT, RIGHT, FULL (COALESCE 함수 포함)\n",
+    "- Set operators: UNION, OUTER UNION, EXCEPT, INTERSECT\n",
+    "- 집계: AVG, COUNT, MAX, MIN, SUM, GROUP BY, HAVING\n",
+    "- 중복 제거: DISTINCT\n",
+    "- 서브쿼리, 인라인 뷰 활용\n",
+    "- SAS 확장 기능:\n",
+    "    - Dataset options (KEEP=, DROP=, RENAME=, OBS=)\n",
+    "    - Invocation options (INOBS=, OUTOBS=, NOPRINT, NUMBER)\n",
+    "    - Functions (SCAN, SUBSTR, LENGTH)\n",
+    "    - Dictionary tables (DICTIONARY.COLUMNS 등)\n",
+    "    - CALCULATED 키워드"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83ecad23-3756-4afa-a09c-c9216b7a2985",
+   "metadata": {},
+   "source": [
+    "### 2. Macro Processing (35%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e4b6b6c-4b39-476c-b558-47b039e4c622",
+   "metadata": {},
+   "source": [
+    "매크로 변수\n",
+    "- 생성: %LET, INTO:, CALL SYMPUTX\n",
+    "- Scope 제어: %GLOBAL, %LOCAL, SYMPUTX 옵션\n",
+    "- 이름 구분자(.) 활용\n",
+    "- 매크로 프로그램\n",
+    "- 정의/호출: %MACRO … %MEND\n",
+    "\n",
+    "파라미터 유무 호출\n",
+    "- 조건문: %IF-%THEN-%ELSE\n",
+    "- 반복문: %DO-%END\n",
+    "- AUTOCALL facility (재사용 가능한 매크로 저장/호출)\n",
+    "\n",
+    "매크로 함수\n",
+    "- 기본: %SCAN, %SUBSTR, %UPCASE\n",
+    "- Quoting: %STR, %NRSTR\n",
+    "- Evaluation: %SYSEVALF\n",
+    "- %SYSFUNC → DATA step 함수 호출\n",
+    "\n",
+    "디버깅\n",
+    "- MLOGIC, MPRINT, SYMBOLGEN\n",
+    "- %PUT 로그 확인\n",
+    "\n",
+    "데이터 기반 매크로\n",
+    "- && 간접 참조\n",
+    "\n",
+    "Dictionary table 기반 매크로\n",
+    "- 반복적 매크로 호출 생성"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d3f03a2-08fd-418c-8b43-2670927b7d2d",
+   "metadata": {},
+   "source": [
+    "### 3. Advanced Techniques (30%)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51f25a60-5a00-4b98-9027-b9c23ad58f9b",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "배열 (Array)\n",
+    "- 문자형/숫자형 배열\n",
+    "- DIM 함수\n",
+    "- Temporary array\n",
+    "- Dataset 값으로 초기화\n",
+    "\n",
+    "Hash Object\n",
+    "- 선언: DECLARE HASH, DECLARE HITER\n",
+    "- 주요 메서드: DEFINEKEY, DEFINEDATA, DEFINEDONE, FIND, ADD, OUTPUT\n",
+    "- Iterator: FIRST, NEXT, LAST, PREV\n",
+    "- 활용: Lookup table, 정렬, 순회\n",
+    "\n",
+    "Utility Procedures\n",
+    "- PROC FORMAT – PICTURE 문 (숫자/날짜 포맷 정의, 옵션: round, default, prefix 등)\n",
+    "- PROC FCMP – 사용자 정의 함수 (단일/다중 인자, 조건문 처리, CMPLIB= 옵션으로 호출)\n",
+    "\n",
+    "고급 함수\n",
+    "- FINDC, FINDW, COUNT, COUNTC, COUNTW\n",
+    "- LAG\n",
+    "- Regex 함수 (PRX)\n",
+    "- 메타문자: () [] {} * + ? . | ^ $ \\d \\D \\s \\S \\w \\W\n",
+    "- 함수: PRXMATCH, PRXPARSE, PRXCHANGE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "75a48f57-47bb-4d27-8063-cc66a48ed9de",
    "metadata": {},
    "source": [
